# Projetc

./: Electi.glade.bak  Makefile  bureau.h  callbacks.c  config.h  config.status  configure  configure.in  election.h  fonctio.c  fonction.c  fonction.h  header.h  interface.glade  interface.glade.bak  liste_elect.c  liste_elect.h  main.c  main.c.save  observateur.c  observateur.h  projet__c.glade  reclamation.c  reclamation.h  user.c  user.h
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  controle_saisie.c  controle_saisie.h  document.c  electeur.c  electeur.h  electeur.txt  election.c  election.h  elections.txt  functions.c  interface  interface.c  interface.c.bak  interface.h  interface.h.bak  lecture.c  lecture.h  list.h  list_elect.h  liste_elect.c  liste_elect.h  login.c  login.h  logs.txt  main.c  main.c.save  municipalities.txt  observateur.c  observateur.h  observateur.txt  reclamation.h  stat.c  stat.h  treeview.c  treeview.h  (+3 more)
src/.deps/: callbacks.Po  controle_saisie.Po  electeur.Po  election.Po  lecture.Po  login.Po  observateur.Po  stat.Po  treeview.Po
